{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 346,
  "lineage": "27c6485c-71a5-c242-ab5b-af574a01463d",
  "resources": [
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:security-group/sg-0ea9b6d35989c4a56",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ea9b6d35989c4a56",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-8768d65d",
            "domain": "vpc",
            "id": "eipalloc-0acffac3921486e1c",
            "network_interface": "eni-0e06a4b2a0b90698c",
            "private_dns": "ip-10-10-0-80.us-west-1.compute.internal",
            "private_ip": "10.10.0.80",
            "public_dns": "ec2-54-219-203-47.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.203.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "celo-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-7d4b2481",
            "domain": "vpc",
            "id": "eipalloc-0fd925dc53de86678",
            "network_interface": "eni-094667f0974f2c83d",
            "private_dns": "ip-10-10-10-106.us-west-1.compute.internal",
            "private_ip": "10.10.10.106",
            "public_dns": "ec2-204-236-147-127.us-west-1.compute.amazonaws.com",
            "public_ip": "204.236.147.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "celo-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_attestation_service_az1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "attestation_service",
      "each": "map",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "index_key": "ThePassiveTrust_az1_01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:468640258083:instance/i-0c0f04142111dd051",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0f04142111dd051",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05af9cb66ffb626d4",
            "private_dns": "ip-10-10-0-113.us-west-1.compute.internal",
            "private_ip": "10.10.0.113",
            "public_ip": "54.219.171.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-07e59dd1c233ad88a",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076693f717ae393e5",
            "tags": {
              "Name": "celo-attestation-service-ThePassiveTrust"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-072c137cfc8ebafbe"
            ]
          },
          "dependencies": [
            "module.celo_cluster.aws_db_instance.attestation",
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_db",
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_service",
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_security_group.full_node",
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_bastion_az1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:468640258083:instance/i-099836d028ea8e3dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099836d028ea8e3dc",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071c1d4ea76159bd0",
            "private_dns": "ip-10-10-0-215.us-west-1.compute.internal",
            "private_ip": "10.10.0.215",
            "public_ip": "54.153.58.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01dd67f9a5b4a027b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076693f717ae393e5",
            "tags": {
              "Name": "celo-bastion-az1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8d56683f0c307b4"
            ]
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_db",
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_service",
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_security_group.full_node",
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_proxy_az1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "celo_proxy",
      "each": "map",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "index_key": "ThePassiveTrust_az1_01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:468640258083:instance/i-05749c3b428550532",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05749c3b428550532",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af7d64ff65c81db1",
            "private_dns": "ip-10-10-0-31.us-west-1.compute.internal",
            "private_ip": "10.10.0.31",
            "public_ip": "54.183.18.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0ae5ed3ddb1efc6a9",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076693f717ae393e5",
            "tags": {
              "Name": "celo-proxy-ThePassiveTrust"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-030692258545e9814"
            ]
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_db",
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_service",
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_security_group.full_node",
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_validator_az1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "celo_validator",
      "each": "map",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "index_key": "ThePassiveTrust_az1_01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f56279347d2fa43e",
            "arn": "arn:aws:ec2:us-west-1:468640258083:instance/i-09d42a56bc1e853ff",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d42a56bc1e853ff",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093c50f9f1294faab",
            "private_dns": "ip-10-10-1-28.us-west-1.compute.internal",
            "private_ip": "10.10.1.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0e1a900582e5c0ba5",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083a742f7b7118216",
            "tags": {
              "Name": "celo-validator-ThePassiveTrust"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03f46ac450f5d3083"
            ]
          },
          "dependencies": [
            "module.celo_cluster.module.celo_proxy_az1.aws_instance.celo_proxy",
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_db",
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_service",
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_security_group.full_node",
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0552d8b8490ef2429",
            "owner_id": "468640258083",
            "tags": {
              "Name": "celo-internet-gateway"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acffac3921486e1c",
            "id": "nat-00d3f69281e2815f5",
            "network_interface_id": "eni-0e06a4b2a0b90698c",
            "private_ip": "10.10.0.80",
            "public_ip": "54.219.203.47",
            "subnet_id": "subnet-076693f717ae393e5",
            "tags": {
              "Name": "celo-nat-gateway-usw1-az3"
            }
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_eip.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd925dc53de86678",
            "id": "nat-0a86fd4e79d857d43",
            "network_interface_id": "eni-094667f0974f2c83d",
            "private_ip": "10.10.10.106",
            "public_ip": "204.236.147.127",
            "subnet_id": "subnet-0fbf786fd44763358",
            "tags": {
              "Name": "celo-nat-gateway-usw1-az1"
            }
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_eip.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-062f16334fa93dd3f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 5432
              }
            ],
            "owner_id": "468640258083",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0db4ce449d5dcc091"
            ],
            "tags": {
              "Name": "celo-private-acl-usw1-az1"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-087e33b26b8548b16",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 5432
              }
            ],
            "owner_id": "468640258083",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-083a742f7b7118216"
            ],
            "tags": {
              "Name": "celo-private-acl-usw1-az3"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0ee777f463c1b8e7f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 131,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "468640258083",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-076693f717ae393e5"
            ],
            "tags": {
              "Name": "celo-public-acl-usw1-az3"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-004664f9cabce0949",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 131,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "468640258083",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0fbf786fd44763358"
            ],
            "tags": {
              "Name": "celo-public-acl-usw1-az1"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0134f0b944a835092",
            "owner_id": "468640258083",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a86fd4e79d857d43",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "celo-private-route-table-usw1-az1"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_eip.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_nat_gateway.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0853483adfbe3de70",
            "owner_id": "468640258083",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00d3f69281e2815f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "celo-private-route-table-usw1-az3"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_eip.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_nat_gateway.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06eb762c126e17be3",
            "owner_id": "468640258083",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0552d8b8490ef2429",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "celo-public-route-table-usw1-az3"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_internet_gateway.igw",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0da549f19b412002f",
            "owner_id": "468640258083",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0552d8b8490ef2429",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "celo-public-route-table-usw1-az1"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_internet_gateway.igw",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077515cac9131efb7",
            "route_table_id": "rtb-0134f0b944a835092",
            "subnet_id": "subnet-0db4ce449d5dcc091"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2.aws_route_table.private",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_eip.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_nat_gateway.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092e6703545eef3f3",
            "route_table_id": "rtb-0853483adfbe3de70",
            "subnet_id": "subnet-083a742f7b7118216"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1.aws_route_table.private",
            "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1.aws_subnet.private",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_eip.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_nat_gateway.nat",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bac06f83db03715e",
            "route_table_id": "rtb-06eb762c126e17be3",
            "subnet_id": "subnet-076693f717ae393e5"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_internet_gateway.igw",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_route_table.public",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058ebcaf1d41ea085",
            "route_table_id": "rtb-0da549f19b412002f",
            "subnet_id": "subnet-0fbf786fd44763358"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_internet_gateway.igw",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_route_table.public",
            "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "attestation_db",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:security-group/sg-01a09e71707028af6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01a09e71707028af6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-072c137cfc8ebafbe"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "celo-attestation-db",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.attestation_service",
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "attestation_service",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:security-group/sg-072c137cfc8ebafbe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072c137cfc8ebafbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8d56683f0c307b4"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "celo-attestation-service",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:security-group/sg-0e8d56683f0c307b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8d56683f0c307b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "celo-bastion",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "full_node",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:security-group/sg-0e794522741beb8c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e794522741beb8c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8d56683f0c307b4"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "celo-full-node",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:security-group/sg-030692258545e9814",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030692258545e9814",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8d56683f0c307b4"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30503,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f46ac450f5d3083"
                ],
                "self": false,
                "to_port": 30503
              }
            ],
            "name": "celo-proxy",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "validator",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:security-group/sg-03f46ac450f5d3083",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f46ac450f5d3083",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8d56683f0c307b4"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030692258545e9814"
                ],
                "self": false,
                "to_port": 30303
              }
            ],
            "name": "celo-validator",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_all_outbound",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2078475249",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-030692258545e9814",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_external_tcp_inbound",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30303,
            "id": "sgrule-3064411656",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030692258545e9814",
            "self": false,
            "source_security_group_id": null,
            "to_port": 30303,
            "type": "ingress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_external_udp_inbound",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30303,
            "id": "sgrule-3362313360",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-030692258545e9814",
            "self": false,
            "source_security_group_id": null,
            "to_port": 30303,
            "type": "ingress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_internal_ssh",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-341217057",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030692258545e9814",
            "self": false,
            "source_security_group_id": "sg-0e8d56683f0c307b4",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_validator_inbound",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 30503,
            "id": "sgrule-1657905250",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030692258545e9814",
            "self": false,
            "source_security_group_id": "sg-03f46ac450f5d3083",
            "to_port": 30503,
            "type": "ingress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "validator_allow_all_outbound",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-602838237",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03f46ac450f5d3083",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "validator_allow_private_ssh",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1096676908",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f46ac450f5d3083",
            "self": false,
            "source_security_group_id": "sg-0e8d56683f0c307b4",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.bastion",
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "validator_allow_proxy_inbound",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 30303,
            "id": "sgrule-3837919191",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f46ac450f5d3083",
            "self": false,
            "source_security_group_id": "sg-030692258545e9814",
            "to_port": 30303,
            "type": "ingress"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_security_group.proxy",
            "module.celo_cluster.module.celo_vpc.aws_security_group.validator",
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:subnet/subnet-0db4ce449d5dcc091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-0db4ce449d5dcc091",
            "map_public_ip_on_launch": false,
            "owner_id": "468640258083",
            "tags": {
              "Name": "celo-private-usw1-az1"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_private_subnet_az1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:subnet/subnet-083a742f7b7118216",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-083a742f7b7118216",
            "map_public_ip_on_launch": false,
            "owner_id": "468640258083",
            "tags": {
              "Name": "celo-private-usw1-az3"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:subnet/subnet-076693f717ae393e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-076693f717ae393e5",
            "map_public_ip_on_launch": false,
            "owner_id": "468640258083",
            "tags": {
              "Name": "celo-public-usw1-az3"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc.module.celo_public_subnet_az2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:subnet/subnet-0fbf786fd44763358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-0fbf786fd44763358",
            "map_public_ip_on_launch": false,
            "owner_id": "468640258083",
            "tags": {
              "Name": "celo-public-usw1-az1"
            },
            "vpc_id": "vpc-02820bbabc49f1397"
          },
          "dependencies": [
            "module.celo_cluster.module.celo_vpc.aws_vpc.celo"
          ]
        }
      ]
    },
    {
      "module": "module.celo_cluster.module.celo_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "celo",
      "provider": "module.celo_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:468640258083:vpc/vpc-02820bbabc49f1397",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07c11b5762c06ce90",
            "default_route_table_id": "rtb-08fedfde2539ed418",
            "default_security_group_id": "sg-0ea9b6d35989c4a56",
            "dhcp_options_id": "dopt-14f8f873",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02820bbabc49f1397",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08fedfde2539ed418",
            "owner_id": "468640258083",
            "tags": {
              "Name": "celo-vpc"
            }
          }
        }
      ]
    }
  ]
}